--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "main": "dist/index.js",
   "scripts": {
     "prebuild": "rm -rf dist/* && eslint . --ext .ts tsconfig.json --fix",
-    "build": "tsc && cp -rf package.json dist/package.json",
+    "build": "tsc && cp -rf package.json dist/package.json && cp -rf database.db dist/database.db",
     "prestart": "npm run build",
-    "start": "ts-node ."
+    "start": "ts-node .",
+    "migration:run": "ts-node ./node_modules/typeorm/cli.js migration:run",
+    "migration:revert": "ts-node ./node_modules/typeorm/cli.js migration:revert"
   },
   "repository": {
     "type": "git",
@@ -31,10 +33,12 @@
     "eslint": "^7.6.0",
     "nodemon": "^2.0.4",
     "ts-node": "^8.10.2",
+    "typeorm": "^0.2.25",
     "typescript": "^3.9.7"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "sqlite3": "^5.0.0"
   }
 }
