--- a/package.json
+++ b/package.json
@@ -1,44 +1,34 @@
 {
   "name": "programming-assignment",
-  "version": "0.0.1",
-  "description": "A programming assignment from Rafflebox",
-  "main": "dist/index.js",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "prebuild": "rm -rf dist/* && eslint . --ext .ts tsconfig.json --fix",
-    "build": "tsc && cp -rf package.json dist/package.json && cp -rf database.db dist/database.db",
-    "prestart": "npm run build",
-    "start": "ts-node .",
-    "migration:run": "ts-node ./node_modules/typeorm/cli.js migration:run",
-    "migration:revert": "ts-node ./node_modules/typeorm/cli.js migration:revert"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/rafflebox-technologies-inc/programming-assignment.git"
-  },
-  "keywords": [
-    "test"
-  ],
-  "author": "Adam Ritchie",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/rafflebox-technologies-inc/programming-assignment/issues"
-  },
-  "homepage": "https://github.com/rafflebox-technologies-inc/programming-assignment#readme",
-  "devDependencies": {
-    "@types/body-parser": "^1.19.0",
-    "@types/express": "^4.17.7",
-    "@types/node": "^14.0.27",
-    "@typescript-eslint/eslint-plugin": "^3.8.0",
-    "@typescript-eslint/parser": "^3.8.0",
-    "eslint": "^7.6.0",
-    "nodemon": "^2.0.4",
-    "ts-node": "^8.10.2",
-    "typeorm": "^0.2.25",
-    "typescript": "^3.9.7"
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "body-parser": "^1.19.0",
-    "express": "^4.17.1",
-    "sqlite3": "^5.0.0"
+    "axios": "^0.19.2",
+    "core-js": "^3.6.5",
+    "vue": "^2.6.11",
+    "vue-class-component": "^7.2.3",
+    "vue-property-decorator": "^8.4.2",
+    "vue-router": "^3.3.4"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^2.33.0",
+    "@typescript-eslint/parser": "^2.33.0",
+    "@vue/cli-plugin-babel": "~4.4.0",
+    "@vue/cli-plugin-eslint": "~4.4.0",
+    "@vue/cli-plugin-typescript": "~4.4.0",
+    "@vue/cli-service": "~4.4.0",
+    "@vue/eslint-config-typescript": "^5.0.2",
+    "eslint": "^6.7.2",
+    "eslint-plugin-vue": "^6.2.2",
+    "node-sass": "^4.12.0",
+    "sass-loader": "^8.0.2",
+    "typescript": "~3.9.3",
+    "vue-template-compiler": "^2.6.11",
+    "vue2-timepicker": "^1.1.3"
   }
 }
