--- a/server/ormconfig.json
+++ b/server/ormconfig.json
@@ -2,7 +2,7 @@
   "type": "sqlite",
   "database": "database.db",
   "name": "default",
-  "synchronize": false,
+  "synchronize": true,
   "logging": true,
   "migrationsTableName": "custom_migration_table",
   "entities": [
